# smr-library-cpp

./: CMakeLists.txt  main.cpp
serialization/: decoder.hpp  serializable.hpp  serializer.hpp
serialization/exceptions/: encodeException.hpp
serialization/json/: jsonDecoder.hpp  jsonEncoder.cpp  jsonSerializer.hpp
src/: CMakeLists.txt
src/commands/: andCommand.cpp  andCommand.hpp  command.cpp  command.hpp  commandError.hpp  commandErrors.cpp  commandErrors.hpp  orCommand.cpp  orCommand.hpp
src/compression/: compressor.hpp  compressorFactory.cpp  compressorFactory.hpp  config.hpp
src/compression/compressors/: gzipCompressor.cpp  gzipCompressor.hpp
src/encoding/: base64.cpp  base64.hpp  morton.hpp
src/hash/: crc32.cpp  crc32.hpp
src/net/http/: codes.hpp  methods.hpp  request.cpp  request.hpp  response.cpp  response.hpp
src/serialization/: decoder.hpp  encoder.cpp  encoder.hpp  exceptions.hpp  flags.hpp  serializable.hpp  serializationUtils.cpp  serializationUtils.hpp  serializer.hpp  serializerConfig.hpp  serializerFactory.cpp  serializerFactory.hpp  utils.cpp  utils.hpp
src/serialization/dsv/: dsvDecoder.cpp  dsvDecoder.hpp  dsvEncoder.cpp  dsvEncoder.hpp  dsvSerializer.cpp  dsvSerializer.hpp
src/serialization/exceptions/: decodeException.hpp  implementException.hpp  tokenException.hpp
src/serialization/json/: jsonDecoder.cpp  jsonDecoder.hpp  jsonEncoder.cpp  jsonEncoder.hpp  jsonSerializer.cpp
src/stuff/: flags.hpp  paginator.hpp  raw_memory.h  svg.cpp  svg.h
src/utils/: memory.hpp  string.cpp  string.hpp
stuff/: dummy.hpp  head.hpp
(+48 files in other folders)
